--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.19.1",
     "axios": "^0.18.0",
     "express": "^4.17.1",
+    "firebase": "^6.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
