--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
     "antd": "^3.19.1",
     "axios": "^0.18.0",
     "express": "^4.17.1",
