--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.0.1",
     "antd": "^3.19.1",
     "axios": "^0.18.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^6.0.4",
     "firebaseui": "^4.0.0",
